@@ -323,7 +323,7 @@ class MP_Gateway_Stripe extends MP_Gateway_API {
 							);
 	
 							foreach ($currencies as $k => $v) {
-									echo '		<option value="' . $k . '"' . ($k == $sel_currency ? ' selected' : '') . '>' . wp_specialchars($v, true) . '</option>' . "\n";
+									echo '		<option value="' . $k . '"' . ($k == $sel_currency ? ' selected' : '') . '>' . esc_html($v) . '</option>' . "\n";
 							}
 							?>
 							</select>
